--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,7 @@ FROM debian:bookworm-slim
 ARG LFS_UID
 ARG LFS_GID
 ARG LFS_USER
+ARG BUILD_DIR
 
 RUN apt-get update && \
     apt-get -y install binutils bison bzip2 gawk gcc g++ \
@@ -10,14 +11,13 @@ RUN apt-get update && \
     apt-get clean all && \
     mv /bin/sh /bin/sh.orig && \
     ln -s bash /bin/sh && \
-    useradd -m -d /home/$LFS_USER -k none -s /bin/bash \
+    useradd -M -d $BUILD_DIR -s /bin/bash \
             -u $LFS_UID -g $LFS_GID $LFS_USER && \
-    echo "${LFS_USER} ALL=NOPASSWD: ALL" >/etc/sudoers.d/lfs_user && \
-    chmod 0440 /etc/sudoers.d/lfs_user
+    echo "${LFS_USER} ALL=NOPASSWD: ALL" >/etc/sudoers.d/lfsuser && \
+    chmod 0440 /etc/sudoers.d/lfsuser
 COPY docker-entrypoint.sh /
-COPY .bashrc .bash_profile /home/$LFS_USER
 
 USER $LFS_UID:$LFS_GID
-WORKDIR /home/$LFS_USER
+WORKDIR $BUILD_DIR
 ENTRYPOINT [ "/docker-entrypoint.sh" ]
 CMD [ "start" ]
