--- a/examples/docker-compose.env
+++ b/examples/docker-compose.env
@@ -1,3 +1,12 @@
-LFS_UID=`id -u`
-LFS_GID=`id -g`
+LFS=/mnt/lfs
+LFS_DISPNM="Yidigun OS"
+LFS_NAME=yidigunos
+LFS_TGT=x86_64-${LFS_NAME}-linux-gnu
+TOOLS=${LFS}/tools
+
+LFS_UID=501
+LFS_GID=20
 LFS_USER=lfsuser
+BUILD_DIR=/home/${LFS_USER}
+SRC_DIR=${BUILD_DIR}/src
+DIST_DIR=${BUILD_DIR}/dist
