--- a/examples/docker-compose.env
+++ b/examples/docker-compose.env
@@ -7,6 +7,6 @@ TOOLS=${LFS}/tools
 LFS_UID=501
 LFS_GID=20
 LFS_USER=lfsuser
-BUILD_DIR=/home/${LFS_USER}
+BUILD_DIR=${LFS}/build
 SRC_DIR=${BUILD_DIR}/src
 DIST_DIR=${BUILD_DIR}/dist
